<resources>
    <string name="app_name">Foosball Matches</string>
    <string name="title_rankings">Rankings</string>
    <string name="title_results">Results</string>
    <string name="title_edit_match_result">Match Result</string>
    <string name="title_player">Player</string>
    <string name="title_wins">W</string>
    <string name="title_matches">M</string>
    <string name="add">Add</string>
    <string name="hint_score">0</string>
    <string name="hint_player_1">Player 1</string>
    <string name="hint_player_2">Player 2</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="sort">Sort</string>
    <string name="by_wins">By Wins</string>
    <string name="by_matches">By Matches</string>
</resources>