<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_rankings">

    <fragment
        android:id="@+id/navigation_rankings"
        android:name="com.korzhuck.foosball.ui.rankings.RankingsFragment"
        android:label="@string/title_rankings"
        tools:layout="@layout/fragment_rankings" />

    <fragment
        android:id="@+id/navigation_results"
        android:name="com.korzhuck.foosball.ui.results.ResultsFragment"
        android:label="@string/title_results"
        tools:layout="@layout/fragment_results">
        <action
            android:id="@+id/to_edit_result"
            app:destination="@id/navigation_edit_match_result" />
    </fragment>

    <fragment
        android:id="@+id/navigation_edit_match_result"
        android:name="com.korzhuck.foosball.ui.edit.EditMatchResultFragment"
        android:label="@string/title_edit_match_result"
        tools:layout="@layout/fragment_edit_match_result">
        <argument
            android:name="match_result"
            app:argType="com.korzhuck.foosball.models.MatchResult"
            app:nullable="true"
            />
    </fragment>
</navigation>