<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="@dimen/activity_vertical_margin"
    android:paddingHorizontal="@dimen/activity_vertical_margin"
    tools:context=".ui.edit.EditMatchResultFragment">

    <EditText
        android:id="@+id/score_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/list_item_vertical_padding"
        android:paddingHorizontal="@dimen/list_item_horizontal_padding"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constrainedWidth="true"
        app:layout_constrainedHeight="true"
        android:hint="@string/hint_score"
        android:inputType="number"
        android:importantForAutofill="no"
        />

    <EditText
        android:id="@+id/score_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/list_item_vertical_padding"
        android:paddingHorizontal="@dimen/list_item_horizontal_padding"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintTop_toBottomOf="@id/score_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constrainedWidth="true"
        app:layout_constrainedHeight="true"
        android:hint="@string/hint_score"
        android:inputType="number"
        android:importantForAutofill="no"
        />

    <EditText
        android:id="@+id/player_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/list_item_vertical_padding"
        android:paddingHorizontal="@dimen/list_item_horizontal_padding"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintTop_toTopOf="@id/score_1"
        app:layout_constraintBottom_toBottomOf="@id/score_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/score_1"
        app:layout_constrainedWidth="true"
        app:layout_constrainedHeight="true"
        app:layout_constraintHorizontal_bias="0.0"
        android:hint="@string/hint_player_1"
        android:inputType="text"
        android:importantForAutofill="no"
        />

    <EditText
        android:id="@+id/player_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/list_item_vertical_padding"
        android:paddingHorizontal="@dimen/list_item_horizontal_padding"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintTop_toTopOf="@id/score_2"
        app:layout_constraintBottom_toBottomOf="@id/score_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/score_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constrainedWidth="true"
        app:layout_constrainedHeight="true"
        android:hint="@string/hint_player_2"
        android:inputType="text"
        android:importantForAutofill="no"
        />

</androidx.constraintlayout.widget.ConstraintLayout>